[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[toml]~=8.0",
    "setuptools~=68.2",
    "wheel~=0.41",
]

[project]
authors = [
    {email = "spencersr@gmail.com"},
    {name = "Shane R. Spencer"},
]
description = "Modular multi-source managed file handling with check logic"
dynamic = [
    "version",
]
license = {text = "MIT License"}
name = "managed"
readme = "README.md"

[project.urls]
homepage = "https://github.com/whardier/managed-python"

[tool.black]
line_length = 120

[tool.flake8]
doctests = true
max-line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
mypy_path = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
